--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,11 @@
-doctype 5
-html
-   head
-      title Gamut -- Main
-      script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-      script(src="/socket.io/socket.io.js")
-      script(src="js/script.js")
-    body
-      h1 Hello Project Gamut
-      p This is the main page
+extends layout
+
+block append js
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+  script(src="/socket.io/socket.io.js")
+  script(src="js/script.js")
+
+block content
+  h1 Project Gamut
+  p Brand new content!
+  p Extra yay
