Refactored form & route redirect

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block append js
 
 block content
   h1 Project Gamut
-  form(method='post')
+  form(action='/', method='post')
     label(for='name') Name:
     input(type='text', name='name', placeholder="alias", required)
     br
