--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ extends layout
 block append js
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
   script(src="/socket.io/socket.io.js")
-  script(src="js/script.js")
+  script(src="js/main.js")
 
 block content
   h1 Project Gamut
-  form(action='/', method='post')
+  #newGameForm
     label(for='name') Name:
     input(type='text', name='name', placeholder="alias", required)
     br
@@ -17,6 +17,6 @@ block content
       option(value='medium') Medium (30x30)
       option(value='large') Large (50x50)
     br
-    input(type='submit') Look for Game
+    button#submit Start Game
 
   div#debug
