Form refactors, with correct jquery binding behavior

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,16 +7,16 @@ block append js
 
 block content
   h1 Project Gamut
-  #newGameForm
-    label(for='name') Name:
-    input(type='text', name='name', placeholder="alias", required)
-    br
-    label(for='gameSize') Game Size:
-    select(name='gameSize')
-      option(value='small') Small (20x20)
-      option(value='medium') Medium (30x30)
-      option(value='large') Large (50x50)
-    br
-    button#submit Start Game
+  form(name="newGame", action='')#newGameForm
+    fieldset
+      label(for='name') Name:
+      input(type='text', name='name', placeholder="alias", required)
+      br
+      label(for='gameSize') Game Size:
+      select(name='gameSize')
+        each size in gameSizes
+          option(value=size.id)= size.description
+      br
+      button#submit Start Game
 
   div#debug
