Two users connect to room with wait queue

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,3 +7,9 @@ $text-color: #911;
 h1 {
   color: $text-color;
 }
+
+#feedback {
+  min-width: 500px;
+  min-height: 200px;
+  background-color: #ddd;
+}
