--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ table {
 h1 {
   color: #991111; }
 
-#feedback {
+#debug {
   min-width: 500px;
   min-height: 200px;
   background-color: #ddd; }
