--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block append js
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
   script(src="/socket.io/socket.io.js")
-  script(src="js/main.js")
+  script(src="js/main.min.js")
 
 block content
   h1 Project Gamut
@@ -22,5 +22,6 @@ block content
         button#submit Start Game
 
   div#feedback
-    button#sendPoke Poke
+
   div#debug
+    button#sendPoke Poke
