--- a/views/index.jade
+++ b/views/index.jade
@@ -6,22 +6,24 @@ block append js
   script(src="js/main.min.js")
 
 block content
-  h1 Project Gamut
-  div#newGameDiv
-    h2 Look for a game
-    form(name="newGame", action='')#newGameForm
-      fieldset
-        label(for='name') Name:
-        input(type='text', name='name', placeholder="alias", required)
-        br
-        label(for='gameSize') Game Size:
-        select(name='gameSize')
-          each size in gameSizes
-            option(value=size.id)= size.description
-        br
-        button#submit Start Game
+  header
+    h1 Project Gamut
+  #gameContainer
+    #newGameDiv
+      h2 Look for a game
+      form(name="newGame", action='')#newGameForm
+        fieldset
+          label(for='name') Name:
+          input(type='text', name='name', placeholder="alias", required)
+          br
+          label(for='gameSize') Game Size:
+          select(name='gameSize')
+            each size in gameSizes
+              option(value=size.id)= size.description
+          br
+          button#submit Start Game
 
-  div#feedback
+    div#feedback
 
-  div#debug
-    button#sendPoke Poke
+    div#debug
+      button#sendPoke Poke
