Form styling and clock

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,13 +50,45 @@ table {
   src: url("webfonts/raleway_thin-webfont.eot?#iefix") format("embedded-opentype"), url("webfonts/raleway_thin-webfont.woff") format("woff"), url("webfonts/raleway_thin-webfont.ttf") format("truetype"), url("webfonts/raleway_thin-webfont.svg#svgFontName") format("svg"); }
 
 body {
-  font-family: 'Raleway', sans-serif; }
+  font-family: 'Raleway', sans-serif;
+  background-color: #3acccc; }
+
+.logo {
+  display: inline-block; }
+
+.logotext {
+  display: inline-block;
+  font-size: 3em;
+  margin-left: 0.125em; }
 
 h1 {
   font-size: 2em; }
 
 h2 {
   font-size: 1.75em; }
+
+label {
+  font-size: 0.875em;
+  display: block;
+  font-family: sans-serif;
+  font-style: none; }
+
+input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  margin-top: 0px;
+  margin-bottom: 8px;
+  padding: 3px; }
+
+select {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 8px; }
 
 #gameContainer {
   color: #eeeeee;
@@ -65,13 +97,13 @@ h2 {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #3acccc;
   text-align: center;
-  padding-top: 3em; }
+  background-color: #3acccc; }
 
 #newGameDiv {
   display: inline-block;
-  text-align: left; }
+  text-align: left;
+  margin-top: 3em; }
 
 #submit {
   border: 0;
@@ -81,24 +113,16 @@ h2 {
   background-color: #ffc749;
   display: block;
   padding: 4px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
-  -webkit-box-shadow: 0px 4px 0px #fa475c, 0px 4px 10px rgba(30, 90, 30, 0.7);
-  -moz-box-shadow: 0px 4px 0px #fa475c, 0px 4px 10px rgba(30, 90, 30, 0.7);
   box-shadow: 0px 4px 0px #fa475c, 0px 4px 10px rgba(30, 90, 30, 0.7);
   width: 100%;
   text-align: center;
-  -webkit-transition: all .1s ease;
-  -moz-transition: all .1s ease;
-  -ms-transition: all .1s ease;
-  -o-transition: all .1s ease;
-  transition: all .1s ease; }
+  -webkit-transition: all 0.1s ease;
+  -moz-transition: all 0.1s ease;
+  transition: all 0.1s ease; }
 
 #submit:hover {
-  -webkit-box-shadow: 0px 3px 0px #db1f05, 0px 3px 6px rgba(0, 0, 0, 0.9);
-  -moz-box-shadow: 0px 3px 0px #db1f05, 0px 3px 6px rgba(0, 0, 0, 0.9);
-  box-shadow: 0px 3px 0px #db1f05, 0px 3px 6px rgba(0, 0, 0, 0.9);
+  box-shadow: 0px 3px 0px #f91530, 0px 3px 6px rgba(30, 90, 30, 0.9);
   position: relative;
   top: 1px; }
 
