--- a/views/index.jade
+++ b/views/index.jade
@@ -7,10 +7,11 @@ block append js
 
 block content
   header
-    h1 Project Gamut
+    //-h1 Project Gamut
   #gameContainer
     #newGameDiv
-      h2 Look for a game
+      img(src='images/logo.svg', alt='logo for gamut').logo
+      h1.logotext Gamut
       form(name="newGame", action='')#newGameForm
         fieldset
           label(for='name') Name:
@@ -21,7 +22,7 @@ block content
             each size in gameSizes
               option(value=size.id)= size.description
           br
-          button#submit Start Game
+          button#submit Search for Game
 
     div#feedback
 
