Added chat functionality

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,5 +26,12 @@ block content
 
     div#feedback
 
+    div#chat
+      p#chatEntries
+      div#chatControls
+        input(type='text')#chatInput
+        button#chatSubmit Send
+        
     div#debug
       button#sendPoke Poke
+
