UI shinyness, view state fixed for player search

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,14 @@ block content
               option(value=size.id)= size.description
           br
           button#submit Search for Game
+    div#waiting
+      h2#waitingMessage Looking for another player
+      .hex1
+      .hex2
+      .hex3
+      .hex4
+      .hex5
+      .hex6
 
     div#feedback
 
