--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -109,3 +109,9 @@ select {
   min-width: 500px;
   min-height: 200px;
 }
+
+#paper {
+  width: 500px;
+  height: 300px;
+  background-color: $secondary-color;
+}
