--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,108 +97,6 @@ table {
   100% {
     opacity: 0; } }
 
-.hex1 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 20px;
-  left: 620px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 3.3s;
-  -moz-animation-delay: 3.3s;
-  animation-delay: 3.3s; }
-
-.hex2 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 800x;
-  left: 900px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 2.4s;
-  -moz-animation-delay: 2.4s;
-  animation-delay: 2.4s; }
-
-.hex3 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 400px;
-  left: 40px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 2.9s;
-  -moz-animation-delay: 2.9s;
-  animation-delay: 2.9s; }
-
-.hex4 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 200px;
-  left: 700px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 1.5s;
-  -moz-animation-delay: 1.5s;
-  animation-delay: 1.5s; }
-
-.hex5 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 600px;
-  left: 400px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 1s;
-  -moz-animation-delay: 1s;
-  animation-delay: 1s; }
-
-.hex6 {
-  background-image: url("../images/hex.svg");
-  background-size: cover;
-  width: 20px;
-  height: 24px;
-  position: absolute;
-  z-index: 99;
-  opacity: 0;
-  top: 80px;
-  left: 80px;
-  -webkit-animation: fadeInOut 3s linear infinite;
-  -moz-animation: fadeInOut 3s linear infinite;
-  animation: fadeInOut 3s linear infinite;
-  -webkit-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  animation-delay: 2s; }
-
 #waitingMessage {
   position: absolute;
   top: 0;
@@ -292,3 +190,8 @@ select {
 #debug {
   min-width: 500px;
   min-height: 200px; }
+
+#paper {
+  width: 500px;
+  height: 300px;
+  background-color: #ffc749; }
