--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block append js
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+  //-script(src="js/snap.svg.js")
   script(src="/socket.io/socket.io.js")
   script(src="js/main.min.js")
 
@@ -39,7 +40,8 @@ block content
       div#chatControls
         input(type='text')#chatInput
         button#chatSubmit Send
-        
+
     div#debug
-      button#sendPoke Poke
+      //-button#sendPoke Poke
+      svg#paper
 
