Implemented a timer on the server. Individual timer for each room. Show timer on game screen

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,6 +40,8 @@ block content
         input(type='text')#chatInput
         button#chatSubmit Send
         
+    div#counter
+
     div#debug
       button#sendPoke Poke
 
