--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,10 +188,9 @@ select {
   top: 1px; }
 
 #debug {
-  min-width: 500px;
-  min-height: 200px; }
+  width: 100%;
+  height: 100%; }
 
 #paper {
-  width: 500px;
-  height: 300px;
-  background-color: #ffc749; }
+  width: 100%;
+  height: 100%; }
