--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -106,12 +106,12 @@ select {
 
 
 #debug {
-  min-width: 500px;
-  min-height: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 #paper {
-  width: 500px;
-  height: 300px;
-  background-color: $secondary-color;
+  width: 100%;
+  height: 100%;
+  //background-color: $secondary-color;
 }
