--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,9 +187,19 @@ select {
   position: relative;
   top: 1px; }
 
+#waiting {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -999; }
+
 #debug {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 #paper {
   width: 100%;
