--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -104,10 +104,21 @@ select {
   top: 1px;
 }
 
+#waiting {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -999;
+}
+
 
 #debug {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #paper {
