--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -2,6 +2,7 @@
 @import "_reset";
 @import "_flex";
 @import "_waiting_animation";
+@import "_jquery.sidr.light";
 
 $offwhite-color: #EEEEEE;
 $primary-color: #3ACCCC;
