--- a/public/sass/_waiting_animation.scss
+++ b/public/sass/_waiting_animation.scss
@@ -37,7 +37,7 @@
 .hex6 { @include hexagon(80px, 80px, 2.0s) }
 
 #waitingMessage {
-  position: absolute;
+  //position: absolute;
   top: 0;
   left: 0;
   width: 100%;
