Fix annoying svg absolute positioning bugs in webkit and firefox

--- a/public/sass/_waiting_animation.scss
+++ b/public/sass/_waiting_animation.scss
@@ -37,9 +37,9 @@
 .hex6 { @include hexagon(80px, 80px, 2.0s) }
 
 #waitingMessage {
-  //position: absolute;
-  top: 0;
-  left: 0;
+  // //position: absolute;
+  // top: 0;
+  // left: 0;
   width: 100%;
   text-align: center;
   margin-top: 20%;
