--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -2,7 +2,7 @@
 @import "_reset";
 @import "_flex";
 @import "_waiting_animation";
-@import "_jquery.sidr.light";
+//@import "_jquery.sidr.light";
 
 $offwhite-color: #EEEEEE;
 $primary-color: #3ACCCC;
@@ -124,20 +124,34 @@ select {
 $banner-height: 2em;
 
 #game {
-  position: relative;
-  height: 100%;
-  width: 100%;
 }
 
 #banner {
   height: $banner-height;
 }
 
+// Stupid fix for webkit bug with svg height
+// with absolute positioning
+#svgContainer {
+  @include box-sizing(border-box);
+  //max-height: 100%;
+  position: absolute;
+  top: $banner-height;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  background-color: $secondary-color;
+}
+
 #paper {
-  //margin-top: $banner-height;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: $secondary-color;
+  width: 100%;
+  height: 100%;
 }
+
+
