--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -6,6 +6,7 @@
 
 $offwhite-color: #EEEEEE;
 $primary-color: #3ACCCC;
+$primary-dark-color: #31B4B4;
 $secondary-color: #FFC749;
 $tertiary-color: #FA475C;
 
@@ -49,13 +50,10 @@ label {
 
 input {
   @include box-sizing(border-box);
-
   width: 100%;
-  //border: 0;
   margin: 0;
   margin-top: 0px;
   margin-bottom: 8px;
-  //margin-left: 0;
   padding: 3px;
 }
 
@@ -127,7 +125,7 @@ $banner-height: 2.5em;
 #banner {
   @include box-sizing(border-box);
   height: $banner-height;
-  background-color: rgba(darken($primary-color, 20%), 0.3);
+  background-color: $primary-dark-color; //rgba(darken($primary-color, 20%), 0.3);
   text-align: center;
   color: $offwhite-color;
 
@@ -139,7 +137,6 @@ $banner-height: 2.5em;
 // with absolute positioning
 #svgContainer {
   @include box-sizing(border-box);
-  //max-height: 100%;
   position: absolute;
   top: $banner-height;
   bottom: 0;
@@ -208,6 +205,8 @@ $banner-height: 2.5em;
 #banner > ul > li:last-child {
   text-align: right;
 }
+
+// TODO: consolodate banner "rounded rect" style into SASS mixin
 
 #banner a {
   border-radius: 0.25em;
