--- a/views/index.jade
+++ b/views/index.jade
@@ -55,6 +55,8 @@ block content
           h1 Gamut
         li <a href="#sidr" id="chatLink">Chat</a>
 
+    div#money
+      p#moneyField ⬡0
 
     div#svgContainer
       svg#paper
